--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "author": "Bautista Aramendia Pradal",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
     "express": "^4.17.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
 }
