--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Bautista Aramendia Pradal",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "express": "^4.17.3",
