--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
