--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "forever": "^4.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
