--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "forever": "^4.0.3",
+    "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
