--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
