--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "express": "^4.17.3",
     "forever": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
