--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "forever": "^4.0.3",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
